Updated class stretch issues

--- a/assets/CSS/class.scss
+++ b/assets/CSS/class.scss
@@ -16,7 +16,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items:stretch;
+    align-items:center;
     min-height:75vh;
     max-width: 100vw;
     overflow: hidden;
@@ -70,9 +70,6 @@ body {
     font-size: 5em;
 }
 
-
-.panelTitle{
-}
 
 .panelLink{
     visibility: hidden;
@@ -325,6 +322,10 @@ body {
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 .panels{
+    align-items:stretch;
+}
+
+.panel p{
     font-size: 4em;
 }
 
@@ -340,6 +341,10 @@ body {
 
 @media only screen and (max-width: 767px) {
     .panels{
+        align-items:stretch;
+    }    
+    
+    .panel p{
         font-size: 2em;
     }
     
